5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4075/executions/1621_2927.log
== TEST (2019-04-01 19:14:46) 
-- CODE:
var= (valor da bebida)
quan= (quantidade de esfirra)

total= ("4,50")

print(round(total, 2))
-- ERROR:
File "XXXX", line 1
    var= (valor da bebida)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:14:48) 
-- CODE:
var= (valor da bebida)
quan= (quantidade de esfirra)

total= ("4,50")

print(round(total, 2))
-- EXECUTION TIME:
0.128432
-- ERROR:
  File "/home/codebench/codes/1621/2927/main.py", line 1
    var= (valor da bebida)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:15:08) 
-- CODE:
var= (valor da bebida)
quan= (quantidade de esfirra)

total= ("4,50")

print("round(total, 2)")
-- ERROR:
File "XXXX", line 1
    var= (valor da bebida)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:15:10) 
-- CODE:
var= (valor da bebida)
quan= (quantidade de esfirra)

total= ("4,50")

print("round(total, 2)")
-- EXECUTION TIME:
0.129198
-- ERROR:
  File "/home/codebench/codes/1621/2927/main.py", line 1
    var= (valor da bebida)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:27:59) 
-- CODE:
var= (valor da bebida)
quan= (quantidade de esfirra)

total= ("4,50")

print("round(total, 2)")
-- ERROR:
File "XXXX", line 1
    var= (valor da bebida)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:32:38) 
-- CODE:
varDaBebida= ("3.00")
varDaEsfirra= ("1.50")
quanDaEsfirra= ("4")

total = ( "varDaEsfirra*quanDaEsfirra")

print("round(total* varDaBebida, 2)")
-- OUTPUT:
round(total* varDaBebida, 2)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:32:48) 
-- CODE:
varDaBebida= ("3.00")
varDaEsfirra= ("1.50")
quanDaEsfirra= ("4")

total = ( "varDaEsfirra*quanDaEsfirra")

print("round(total* varDaBebida, 2)")
-- EXECUTION TIME:
0.142884
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
round(total* varDaBebida, 2)
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
round(total* varDaBebida, 2)
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
round(total* varDaBebida, 2)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:33:01) 
-- CODE:
varDaBebida= ("3.00")
varDaEsfirra= ("1.50")
quanDaEsfirra= ("4")

total = ( "varDaEsfirra*quanDaEsfirra")

print(round(total* varDaBebida, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(total* varDaBebida, 2))
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:33:06) 
-- CODE:
varDaBebida= ("3.00")
varDaEsfirra= ("1.50")
quanDaEsfirra= ("4")

total = ( "varDaEsfirra*quanDaEsfirra")

print(round(total* varDaBebida, 2))
-- EXECUTION TIME:
0.216014
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2927/main.py", line 7, in <module>
    print(round(total* varDaBebida, 2))
TypeError: can't multiply sequence by non-int of type 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:33:07) 
-- CODE:
varDaBebida= ("3.00")
varDaEsfirra= ("1.50")
quanDaEsfirra= ("4")

total = ( "varDaEsfirra*quanDaEsfirra")

print(round(total* varDaBebida, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(total* varDaBebida, 2))
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:33:45) 
-- CODE:
varDaBebida= ("3.00")
varDaEsfirra= ("1.50")
quanDaEsfirra= ("4")

total = ( "varDaEsfirra*quanDaEsfirra")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(total* varDaBebida, 2))
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:33:47) 
-- CODE:
varDaBebida= ("3.00")
varDaEsfirra= ("1.50")
quanDaEsfirra= ("4")

total = ( "varDaEsfirra*quanDaEsfirra")


-- EXECUTION TIME:
0.160459
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:

-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:

-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:34:17) 
-- CODE:
varDaBebida= ("3.00")
varDaEsfirra= ("1.50")
quanDaEsfirra= ("4")

total = ( "varDaEsfirra*quanDaEsfirra")

print(" total *3, 2")
-- OUTPUT:
total *3, 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:34:19) 
-- CODE:
varDaBebida= ("3.00")
varDaEsfirra= ("1.50")
quanDaEsfirra= ("4")

total = ( "varDaEsfirra*quanDaEsfirra")

print(" total *3, 2")
-- EXECUTION TIME:
0.153551
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
total *3, 2
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
total *3, 2
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
total *3, 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:34:30) 
-- CODE:
varDaBebida= ("3.00")
varDaEsfirra= ("1.50")
quanDaEsfirra= ("4")

total = ( "varDaEsfirra*quanDaEsfirra")

print(round(" total *3, 2")
-- ERROR:
File "XXXX", line 8
    
                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:34:32) 
-- CODE:
varDaBebida= ("3.00")
varDaEsfirra= ("1.50")
quanDaEsfirra= ("4")

total = ( "varDaEsfirra*quanDaEsfirra")

print(round(" total *3, 2")
-- EXECUTION TIME:
0.211075
-- ERROR:
  File "/home/codebench/codes/1621/2927/main.py", line 8
    
                               ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:35:12) 
-- CODE:
varDaBebida= ("3.00")
varDaEsfirra= ("1.50")
quanDaEsfirra= ("4")

total = ( "varDaEsfirra*quanDaEsfirra")

print("round(total*3, 2)"
-- ERROR:
File "XXXX", line 8
    
                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:35:13) 
-- CODE:
varDaBebida= ("3.00")
varDaEsfirra= ("1.50")
quanDaEsfirra= ("4")

total = ( "varDaEsfirra*quanDaEsfirra")

print("round(total*3, 2)"
-- EXECUTION TIME:
0.177929
-- ERROR:
  File "/home/codebench/codes/1621/2927/main.py", line 8
    
                             ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:35:35) 
-- CODE:
varDaBebida= ("3.00")
varDaEsfirra= ("1.50")
quanDaEsfirra= ("4")

total = ( "varDaEsfirra*quanDaEsfirra")

print("round(total* varDaBebida, 2)"
-- ERROR:
File "XXXX", line 8
    
                                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:35:39) 
-- CODE:
varDaBebida= ("3.00")
varDaEsfirra= ("1.50")
quanDaEsfirra= ("4")

total = ( "varDaEsfirra*quanDaEsfirra")

print("round(total* varDaBebida, 2)"
-- EXECUTION TIME:
0.122586
-- ERROR:
  File "/home/codebench/codes/1621/2927/main.py", line 8
    
                                        ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:35:46) 
-- CODE:
varDaBebida= ("3.00")
varDaEsfirra= ("1.50")
quanDaEsfirra= ("4")

total = ( "varDaEsfirra*quanDaEsfirra")

print("round(total* varDaBebida, 2)")
-- OUTPUT:
round(total* varDaBebida, 2)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:35:49) 
-- CODE:
varDaBebida= ("3.00")
varDaEsfirra= ("1.50")
quanDaEsfirra= ("4")

total = ( "varDaEsfirra*quanDaEsfirra")

print("round(total* varDaBebida, 2)")
-- EXECUTION TIME:
0.166035
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
round(total* varDaBebida, 2)
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
round(total* varDaBebida, 2)
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
round(total* varDaBebida, 2)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:35:58) 
-- CODE:
varDaBebida= ("3.00")
varDaEsfirra= ("1.50")
quanDaEsfirra= ("4")

total = ( "varDaEsfirra*quanDaEsfirra")

print("round(total* 3, 2)")
-- OUTPUT:
round(total* 3, 2)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:36:00) 
-- CODE:
varDaBebida= ("3.00")
varDaEsfirra= ("1.50")
quanDaEsfirra= ("4")

total = ( "varDaEsfirra*quanDaEsfirra")

print("round(total* 3, 2)")
-- EXECUTION TIME:
0.149503
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
round(total* 3, 2)
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
round(total* 3, 2)
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
round(total* 3, 2)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:37:03) 
-- CODE:
var= ("3.00")

quan= ("4")

total = (var*quan)

print("round(total, 2)")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = (var*quan)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:37:10) 
-- CODE:
var= ("3.00")

quan= ("4")

total = (var*quan)

print("round(total, 2)")
-- EXECUTION TIME:
0.201079
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2927/main.py", line 5, in <module>
    total = (var*quan)
TypeError: can't multiply sequence by non-int of type 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:37:13) 
-- CODE:
var= ("3.00")

quan= ("4")

total = (var*quan)

print("round(total, 2)")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = (var*quan)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:37:24) 
-- CODE:
var= ("3.00")

quan= ("4")

total = (var*quan)

print("round str(total, 2)")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = (var*quan)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:37:26) 
-- CODE:
var= ("3.00")

quan= ("4")

total = (var*quan)

print("round str(total, 2)")
-- EXECUTION TIME:
0.0983491
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2927/main.py", line 5, in <module>
    total = (var*quan)
TypeError: can't multiply sequence by non-int of type 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:37:36) 
-- CODE:
var= ("3.00")

quan= ("4")

total = (var*quan)

print("round (total, 2)")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = (var*quan)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:37:46) 
-- CODE:
var= ("3.00")

quan= ("4")

total = (var*quan)

print str("round (total, 2)")
-- ERROR:
File "XXXX", line 7
    print str("round (total, 2)")
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:38:00) 
-- CODE:
var= ("3.00")

quan= ("4")

total = (var*quan)

print str("round (total, 2)")
-- EXECUTION TIME:
0.153603
-- ERROR:
  File "/home/codebench/codes/1621/2927/main.py", line 7
    print str("round (total, 2)")
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:38:14) 
-- CODE:
var= ("3.00")

quan= ("4")

total = (var*quan)

print ("round 'str'(total, 2)")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = (var*quan)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:49:28) 
-- CODE:
var= ("3.00")

quan= ("4")

total = (var*quan)

print ("round 'str'(total, 2)")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = (var*quan)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:51:59) 
-- CODE:
var= ("3,00")
varDaEsfirra("1,50")
quan= ("4")

total = ("(varDaEsfirra*quan)+var")

print ("round(total, 2)")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    varDaEsfirra("1,50")
NameError: name 'varDaEsfirra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:52:37) 
-- CODE:
var= ("3,00")
esfirra= ("1,50")
quan= ("4")

total = ("(esfirra*quan)+var")

print ("round(total, 2)")
-- OUTPUT:
round(total, 2)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:52:43) 
-- CODE:
var= ("3,00")
esfirra= ("1,50")
quan= ("4")

total = ("(esfirra*quan)+var")

print ("round(total, 2)")
-- EXECUTION TIME:
0.148
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
round(total, 2)
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
round(total, 2)
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
round(total, 2)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:52:57) 
-- CODE:
var= ("3,00")
esfirra= ("1,50")
quan= ("4")

total = ("(esfirra*quan)+var")

print ("round(total, 2)")
-- OUTPUT:
round(total, 2)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
